--- a/webapp/view/Edit.view.xml
+++ b/webapp/view/Edit.view.xml
@@ -11,7 +11,10 @@
             <core:Fragment fragmentName="com.ui5.trng.sapui5bootcampordermanagement.fragment.Header" type="XML" />
         </f:title>
         <f:content>
-            <core:Fragment fragmentName="com.ui5.trng.sapui5bootcampordermanagement.fragment.OrderDetails" type="XML" />
+            <VBox class="sapUiSmallMargin">
+                <core:Fragment fragmentName="com.ui5.trng.sapui5bootcampordermanagement.fragment.EditForm" type="XML" />
+                <core:Fragment fragmentName="com.ui5.trng.sapui5bootcampordermanagement.fragment.ProductsTable" type="XML" />
+            </VBox>
         </f:content>
         <f:footer>
             <core:Fragment fragmentName="com.ui5.trng.sapui5bootcampordermanagement.fragment.Footer" type="XML" />
